--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/MCRcodes/backend-postgres-music-library#readme",
   "dependencies": {
     "aws-sdk": "^2.1329.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.6.4",
     "multer": "^1.4.5-lts.1",
