--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "aws-sdk": "^2.1329.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase-admin": "^11.7.0",
     "joi": "^17.6.4",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.8.0",
